# child-poverty-impact-dashboard

./: .gitignore  Makefile  README.md  package.json  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  reform-scores.yml  reform-sweep.yml
analysis/reform_scores/: README.md  REPORT.md  SWEEP.md  anchors.yaml  priors.yaml  results.json  score-scenarios.json  score_reforms.py  sweep_reforms.py
analysis/state_audit/: ANALYSIS.md  README.md  build_csvs.py  state_audit_modal.py
backend/: requirements.txt
backend/app/: __init__.py  main.py
cpid_calc/: __init__.py
cpid_calc/calculations/: __init__.py  distributional.py  fiscal.py  impact.py  microsim.py
cpid_calc/data/: __init__.py  eitc_helper.py  state_programs.py
cpid_calc/household/: __init__.py  builder.py  config.py  simulation.py
cpid_calc/reforms/: __init__.py  builder.py  config.py  ctc.py  dependent_exemption.py  eitc.py  eitc_reforms.json  eitc_reforms.py  snap.py  state_aware.py  state_ctc.py  ubi.py
docs/: ADDING_REFORM_OPTIONS.md
frontend/: eslint.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/__tests__/: ReformOptionsSelector.test.tsx  reform-coverage.test.ts  reforms.test.ts  setup.ts  share-link.test.ts
frontend/app/: HomeClient.tsx  LayoutShell.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/lib/: api.ts  (+10 more)
modal_app/: __init__.py  app.py  client.py
scripts/: build_populace_state_slices.py  modal_cpid_endpoint.py
tests/: __init__.py
(+48 files in other folders)
